<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".CadastroActivity">

    <include
        android:id="@+id/includeTbPrincipal"
        layout="@layout/toolbar_principal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCadastroNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includeTbPrincipal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCadastroNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintNome"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCadastroEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputCadastroNome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCadastroEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:inputType="text|textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCadastroSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputCadastroEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCadastroSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintSenha"
            android:inputType="text|textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCadastroTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputCadastroSenha">

<!--        <com.google.android.material.textfield.TextInputEditText-->
        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/editCadastroTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintTelefone"
            android:inputType="phone"
            app:mask="(##) #####-####" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primaria"
        android:text="Cadastrar"
        android:textColor="@color/branco"
        android:textColorLink="@color/primaria"
        app:iconTint="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputCadastroTelefone" />

</androidx.constraintlayout.widget.ConstraintLayout>